acpi_pad: fix power_saving thread deadlock

Patchwork-id: 59637
O-Subject: [RHEL 6.5 PATCH BZ 751123] acpi_pad: fix power_saving thread deadlock
Bugzilla: 751123
RH-Acked-by: Prarit Bhargava <prarit@redhat.com>
RH-Acked-by: Jes Sorensen <Jes.Sorensen@redhat.com>
RH-Acked-by: Dean Nelson <dnelson@redhat.com>
RH-Acked-by: Stefan Assmann <sassmann@redhat.com>

Bugzilla: https://bugzilla.redhat.com/show_bug.cgi?id=751123

Description:

    Direct application of an upstream patch.

Upstream Status: 5f1601261050251a5ca293378b492a69d590dacb

Brew: http://brewweb.devel.redhat.com/brew/taskinfo?taskID=5846206

Tested:

    Easily reproduced on system with many cores/threads that loads
    the acpi_pad kernel module. I used a 2 socket system with a total
    of 24 threads.

    # cd /sys/devices/LNXSYSTM:00/LNXSYBUS:00/PNP0A08:00/ACPI0000C:00/
    # echo 1 >rrtime
    # echo 23 >idlecpus ; echo 0 >idlecpus
    # echo 23 >idlecpus ; echo 0 >idlecpus
    ...
    # echo 23 >idlecpus ; echo 0 >idlecpus

    Without the patch, after only a few large scale changes to the
    set of idle cpus, this will hang in a mutex deadlock attempting
    to bring cpu threads out of powersaving idle.
    With the patch, the hang is not reproducible.

Dependency:

    This patch assumes acpi_pad.c as patched by my post on May 20
    but is otherwise logically independent.

Author:     Stuart Hayes <Stuart_Hayes@Dell.com>
AuthorDate: Wed Jun 13 16:10:45 2012 -0500
Commit:     Len Brown <len.brown@intel.com>
CommitDate: Sat Jun 30 00:51:13 2012 -0400

    acpi_pad: fix power_saving thread deadlock

    The acpi_pad driver can get stuck in destroy_power_saving_task()
    waiting for kthread_stop() to stop a power_saving thread.  The problem
    is that the isolated_cpus_lock mutex is owned when
    destroy_power_saving_task() calls kthread_stop(), which waits for a
    power_saving thread to end, and the power_saving thread tries to
    acquire the isolated_cpus_lock when it calls round_robin_cpu().  This
    patch fixes the issue by making round_robin_cpu() use its own mutex.

    https://bugzilla.kernel.org/show_bug.cgi?id=42981

    Cc: stable@vger.kernel.org
    Signed-off-by: Stuart Hayes <Stuart_Hayes@Dell.com>
    Signed-off-by: Len Brown <len.brown@intel.com>

Signed-off-by: Jarod Wilson <jarod@redhat.com>